--- a/4th_homework_이형우_2019013609.html
+++ b/4th_homework_이형우_2019013609.html
@@ -1,11 +1,22 @@
-이름: 이형우
-성별: 남성
-나이: 22
-학번: 2019013609
-전공: 소프트웨어학부 소프트웨어 전공
-소개글:저는 작년 이 학교에 입학하면서 코딩을 처음 접했습니다. 처음 접한만큼 어려움이 많았습니다. 혼자 공부를 하는 것에는 한계가 있었습니다
-    그때마다 지금 팀원들이 도와주었습니다. 비록 팀원들보다는 떨어지는 실력이지만 이번 기회에 많은 발전을 하고 싶습니다.
-깃헙 페이지:https://github.com/hyoungWoo-lee/hyoungWoo-lee.github.io
+<!doctype html>
+<html>
+<head>
+<title>4th_homework_hyoungWoo_Lee</title>
+<meta charset="utf-8">
+</head>
 
-팀원들의 깃헙페이지: 이용현 https://github.com/A1paBeta/ERICA-OSS-TEAM-ME-INTRODUCE
-                    홍시영 https://github.com/mushbaur/oss-dev-2020
+<body>
+  <h1>My name</h1>
+  <p>HyoungWoo_Lee<br>HYU ERICA Software student number_2019013609
+  </p>
+  <p style="margin-top:20px;"><a href=https://github.com/hyoungWoo-lee/hyoungWoo-lee.github.io target="_blank" title="My Github Link">Github Link</a>
+  </p>
+  <hr>
+  <h2>Teammates</h2>
+  <ul>
+    <li><a href="" target="_blank" title="김동현">김동현</a></li>
+    <li><a href="https://github.com/A1paBeta/ERICA-OSS-TEAM-ME-INTRODUCE" target="_blank" title="이용현">이용현</a></li>
+    <li><a href="https://github.com/hyoungWoo-lee/hyoungWoo-lee.github.io" target="_blank" title="이형우">이형우</a></li>
+  </ul>
+</body>
+</html>
